[package]
name = "cedt-intern-compensation-sorting-scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.31"
jsonxf = "1.1.1"
polars = { version = "0.45.1", features = ["json", "lazy", "object", "polars-io", "serde"] }
reqwest = { version="0.12.9", features = ["blocking","cookies"]}
reqwest_cookie_store = "0.8.0"
scraper = "0.22.0"
serde = {version="1.0.216", features= ["derive"]}
serde_json = "1.0.133"
tokio = { version="1.42.0", features = ["macros", "rt-multi-thread"] }
